added a prototype for filtering and a method for obtaining filtered data
