# main.py
@@ -1,10 +1,14 @@
 import connexion
 from src.core.format_reporting import format_reporting
+from src.core.type_filter import type_filter
 from src.errors.validator import Validator
 from src.reports.report_factory import report_factory
 from src.data_reposity import data_reposity
 from src.manager.settings_manager import settings_manager
 from src.start_service import start_service
+from flask import abort, request
+from src.dto.filter import filter
+from src.logics.models_prototype import models_prototype
 
 app = connexion.FlaskApp(__name__)
 manager = settings_manager()
@@ -16,16 +20,30 @@ start.create()
 """
 Api для получения списка всех форматов для построения отчетов
 """
-@app.route("/api/reports/formats", methods=["GET"])
+@app.route("/api/report/formats", methods=["GET"])
 def formats():
     return [{"name":item.name, "value":item.value} for item in format_reporting]
 
+"""
+Api для получения списка всех форматов фильтрации
+"""
+@app.route("/api/type_filter", methods=["GET"])
+def get_type_filter():
+    return [{"name":item.name, "value":item.value} for item in type_filter]
+
+"""
+Api для получения списка моделей
+"""
+@app.route("/api/report/models", methods=['GET'])
+def models():
+    return data_reposity.keys()
 
 """
 Api для получения отчета по единицам измерения
 """
-@app.route("/api/reports/range/<format>", methods=["GET"])
-def reports_range(format: str):
+@app.route("/api/report/range/<format>", methods=["GET"])
+def report_range(format: str):
+    format = format.upper()
     inner_format = format_reporting(format)
     report = report_factory(manager).create(inner_format)
     report.create( reposity.data[ data_reposity.range_key()  ] )
@@ -36,8 +54,9 @@ def reports_range(format: str):
 """
 Api для получения отчета по группам номенклатур
 """
-@app.route("/api/reports/group/<format>", methods=["GET"])
-def reports_group(format: str):
+@app.route("/api/report/group/<format>", methods=["GET"])
+def report_group(format: str):
+    format = format.upper()
     inner_format = format_reporting(format)
     report = report_factory(manager).create(inner_format)
     report.create( reposity.data[ data_reposity.group_key()  ] )
@@ -48,8 +67,9 @@ def reports_group(format: str):
 """
 Api для получения отчета по номенклатурам
 """
-@app.route("/api/reports/nomenclature/<format>", methods=["GET"])
-def reports_nomenclature(format: str):
+@app.route("/api/report/nomenclature/<format>", methods=["GET"])
+def report_nomenclature(format: str):
+    format = format.upper()
     inner_format = format_reporting(format)
     report = report_factory(manager).create(inner_format)
     report.create( reposity.data[ data_reposity.nomenclature_key()  ] )
@@ -60,11 +80,39 @@ def reports_nomenclature(format: str):
 """
 Api для получения отчета по рецептам
 """
-@app.route("/api/reports/recipe/<format>", methods=["GET"])
-def reports_recipe(format: str):
+@app.route("/api/report/recipe/<format>", methods=["GET"])
+def report_recipe(format: str):
+    format = format.upper()
     inner_format = format_reporting(format)
     report = report_factory(manager).create(inner_format)
     report.create( reposity.data[ data_reposity.recipe_key()  ] )
+
+    return report.result
+
+"""
+Api для получения фильтрованных данных по модели
+"""
+@app.route("/api/filter/<model>", methods=["POST"])
+def filter_data(model: str):
+
+    if model not in data_reposity.keys():
+        abort(400)
+
+    request_data = request.get_json()
+    item_filter = filter.create(request_data)
+
+    data = reposity.data[model]
+    if not data:
+        abort(404)
+
+    prototype = models_prototype(data)
+    prototype.create(data, item_filter)
+
+    if not prototype.data:
+        return {}
+
+    report = report_factory(manager).create(format_reporting.JSON)
+    report.create(prototype.data)
 
     return report.result
 
